src/app/page/home-page/home-page.css
.about-article{
  display: grid;
  grid-template-areas:
  "article-photo article-text";
  grid-template-columns: repeat(2, minmax(0,1fr));
  margin: 1vw;
  gap: 1vw;
  padding: 0;
}

.article-photo-container{
  background-image: url(./images/man_bouldering.jpg);
  border-radius: var(--default-border-radius);
  background-repeat: no-repeat;
  background-position: bottom;
  background-size: cover;
  grid-area: article-photo;
  min-height: 85vh;
}


.article-content{
  max-height: 85vh;
  overflow: scroll;
}

